[package]
name = "text_trees"
description = "Simple textual output for tree-like structures."
version = "0.1.2"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/text_trees/"
repository = "https://github.com/johnstonskj/rust-text_trees.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]

[dev-dependencies]
pretty_assertions = "0.7.1"